--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,2 @@
-SMTP_USER1=jasmin9@ethereal.email
-SMTP_PASS1=r5fAu58JPP6ZRsPaWg
-
-SMTP_USER=evolapp10@gmail.com
-SMTP_PASS="Evolapp@#2025"
+SMTP_USER=contact@evolapp.com
+SMTP_PASS=1tZb*kkd,MRT
