--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "dotenv": "^17.2.2",
     "next": "^15.0.3",
     "nodemailer": "^6.10.1",
     "react": "^18",
