--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,8 @@
 SMTP_USER=contact@evolapp.com
 SMTP_PASS=1tZb*kkd,MRT
+
+SMTP_HOST=mail.evolapp.com 
+SMTP_PORT=465 
+SMTP_USER=contact@evolapp.com 
+SMTP_PASS=[J1Y=[_WdMps1J1k 
+SMTP_TO=evolapp10@gmail.com adapte
