--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,15 @@
-SMTP_USER=contact@evolapp.com
-SMTP_PASS=1tZb*kkd,MRT
+#SMTP_USER=contact@evolapp.com
+#SMTP_PASS=1tZb*kkd,MRT
 
-SMTP_HOST=mail.evolapp.com 
+#SMTP_HOST=mail.evolapp.com 
+#SMTP_PORT=465 
+#SMTP_USER=contact@evolapp.com 
+#SMTP_PASS=[J1Y=[_WdMps1J1k 
+#SMTP_TO=evolapp10@gmail.com adapte
+
+
+#SMTP_HOST=mail.evolapp.com 
 SMTP_PORT=465 
-SMTP_USER=contact@evolapp.com 
-SMTP_PASS=[J1Y=[_WdMps1J1k 
-SMTP_TO=evolapp10@gmail.com adapte
+SMTP_USER=evolapp10@gmail.com  
+SMTP_PASS=ikff wdor kqjm jqhz 
+#SMTP_TO=evolapp10@gmail.com 
