--- a/.env.local
+++ b/.env.local
@@ -13,3 +13,5 @@ SMTP_PORT=465
 SMTP_USER=evolapp10@gmail.com  
 SMTP_PASS=ikff wdor kqjm jqhz 
 #SMTP_TO=evolapp10@gmail.com 
+
+RESEND_API_KEY=re_f5muNUaM_Q6oyyWix3wdtF85GgP7ousPF
