--- a/.env
+++ b/.env
@@ -16,7 +16,8 @@ SMTP_PASS=ikff wdor kqjm jqhz
 
 RESEND_API_KEY=re_f5muNUaM_Q6oyyWix3wdtF85GgP7ousPF
 
+#DATABASE_URL="postgresql://postgres:O2HqYTPD5IUMtVTc@db.uyxavfvbwaalqseeghxj.supabase.co:5432/postgres"
 #DATABASE_URL="postgresql://postgres.bdrvjmeqcvexfibxyqyj:O2HqYTPD5IUMtVTc@aws-1-eu-west-1.pooler.supabase.com:5432/postgres?sslmode=require"
-#DATABASE_URL="postgresql://postgres.uyxavfvbwaalqseeghxj:O2HqYTPD5IUMtVTc@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
 DATABASE_URL="postgresql://postgres.uyxavfvbwaalqseeghxj:O2HqYTPD5IUMtVTc@aws-1-eu-west-1.pooler.supabase.com:5432/postgres"
+
 
