--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "create-tables": "node scripts/create-tables.js",
+    "encode-password": "node scripts/encode-password.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^17.2.2",
     "next": "^15.0.3",
@@ -18,5 +24,8 @@
     "react-dom": "^18",
     "react-modal-video": "^2.0.2",
     "swiper": "^11.1.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.1"
   }
 }
