--- a/env.example
+++ b/env.example
@@ -9,3 +9,7 @@ SMTP_PASS="votre-mot-de-passe-app"
 # Resend (optionnel - pour la newsletter)
 RESEND_API_KEY="votre-clé-resend"
 
+# Administration (IMPORTANT : Changez ces valeurs en production !)
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin123"
+
